syntax = "proto3";
package pebble;

option go_package = "github.com/tachunwu/distcomm/proto/pebble";


service PebbleService {
    rpc Get(GetRequest) returns (GetResponse){}
    rpc Set(SetRequest) returns (SetResponse){}
    rpc Delete(DeleteRequest) returns (DeleteResponse){}
    rpc Scan(ScanRequest) returns (ScanResponse){}
}

message GetRequest {
    bytes key = 1;
}

message GetResponse {
    bytes value = 1;
    string status = 10;
}

message SetRequest {
    bytes key = 1;
    bytes value = 2;
}

message SetResponse {
    string status = 10;
}

message DeleteRequest {
    bytes key = 1;
}

message DeleteResponse {
    string status = 10;
}

message ScanRequest {
    bytes start_key = 1;
    bytes end_key = 2;

}

message ScanResponse {
    repeated bytes values = 1;
    string status = 10;
}